--- a/notifications.css
+++ b/notifications.css
@@ -1,32 +1,30 @@
  @import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,600');
  .notificationPane {
-   width: 100vh;
+   width: 34em;
    position: absolute;
    left: 0;
    right: 0;
    margin: auto;
-   top: 16px;
+   top: 5px;
  }
 
  .notification {
    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.24), 0 3px 3px rgba(0, 0, 0, 0.345);
    display: inline-block;
    margin: auto;
-   /*margin-bottom: 16px;*/
    border-radius: 4px;
-   padding: 0;
    font-family: 'Fira Sans', sans-serif;
    position: relative;
-   top: -100%;
+   top: -100vh;
    visibility: hidden;
    -webkit-animation: slide 0.5s forwards;
    animation: slide 0.5s forwards;
    background-color: white;
    width: 34em;
    min-height: 64px;
-   margin: 5px;
+   margin-top: 5px;
+   margin-bottom: 5px;
    color: rgba(#574f4a, 0.87);
-   background-color: $base_color;
    border: none;
  }
 
